# workshop-expoqa24

./: .gitignore  Modelfile  README.md  Simple_LLM_Model.ipynb  app.py  basic_chat.py  pyproject.toml
.github/workflows/: main.yml
prompt/: summary.py
src/: sentiment.py  summarize.py
tests/: test_sentiment.py  test_summarize.py  test_transcribe.py
