[tool.poetry]
name = "workshop"
version = "0.1.0"
description = ""
authors = ["Enrique Sanchez <je.sanchezb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
ollama = "^0.1.8"
langchain-community = "^0.0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
