[tool.poetry]
name = "workshop"
version = "0.1.0"
description = ""
authors = ["Enrique Sanchez <je.sanchezb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.26.0"
ollama = "^0.1.8"
langchain = "^0.1.16"
langchain-community = "^0.0.33"
faster-whisper = "^1.0.1"
transformers = "^4.39.3"
tensorflow = "^2.16.1"
tf-keras = "^2.16.0"
rouge = "^1.0.1"
evaluate = "^0.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [".", "tests"]
